# mot_docker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  README.md  guia.txt  open_docker.sh  run_eval.py  run_python_mot.py
.devcontainer/: devcontainer.json
examples/: hog_bt.rs  mivideo.rs  video1.rs  yolo_bt.rs  yolo_norfair.rs  yolo_tracktrack.rs  yolors_bt.rs
src/: lib.rs  main.rs  tracktrack.rs
src/fast_re_id/: emb_computer.rs  mod.rs
src/tracktrack/: cmc.rs  kalman_filter.rs  mod.rs  track.rs  tracker.rs  tracktrack.rs  utils.rs
