[package]
name = "mot"
version = "0.1.0"
edition = "2021"

[dependencies]
trackforge = "0.1.9"
opencv = "0.94.4" # Se usa esta versión porque es la que usa yolo_detector, no actualizar hasta que no actualicen yolo_detector
yolo_detector = "1.0.1"
norfair-rs = "0.4.2"
nalgebra = "0.34.2"

[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort", tag = "v1.16.3" }